external-dns/integration-tests/dns-test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dns-test
  template:
    metadata:
      labels:
        app: dns-test
    spec:
      containers:
        - name: http
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dns-test
spec:
  selector:
    app: dns-test
  ports:
    - port: 80
      targetPort: 80
