external-dns/integration-tests/dns-test-ingress.yaml
#FOR TEST PURPUSES ONLY

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dns-test
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dns-test.312ubuntu.com
spec:
  ingressClassName: nginx
  rules:
    - host: dns-test.312ubuntu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dns-test
                port:
                  number: 80
